--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "sweetalert2": "^11.3.3"
     }
 }
