--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "jquery": "^3.6.0",
+        "jquery-validate": "^2.0.0",
         "sweetalert2": "^11.3.3"
     }
 }
