--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "ingenious/jquery-validator": "dev-master",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "realrashid/sweet-alert": "^4.1",
