--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "jquery": "^3.6.0",
         "jquery-validate": "^2.0.0",
+        "slick-carousel": "^1.8.1",
         "sweetalert2": "^11.3.3"
     }
 }
