--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
-/public/customer/css
-/public/admin/css
-/public/js/app.js
+/public/customer/css/
+/public/admin/css/
+/public/js/
 /storage/*.key
 /vendor
 .env
