--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "serve": "php artisan serve",
+        "start": "start npm run serve && npm run prod && npm run watch"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.0",
