--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "start": "start npm run serve && npm run watch"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.0",
+        "@popperjs/core": "^2.11.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.39",
@@ -43,6 +43,7 @@
         "load-google-maps-api": "^2.0.2",
         "masonry-layout": "^4.2.2",
         "perfect-scrollbar": "^1.5.5",
+        "popper.js": "^1.16.1",
         "skycons": "^1.0.0",
         "slick-carousel": "^1.8.1",
         "sweetalert2": "^11.3.3"
