--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/function.php"
+            "app/Helpers/function.php",
+            "app/Models/Filter.php"
         ]
     },
     "autoload-dev": {
