--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@fullcalendar/list": "^5.10.1",
         "@fullcalendar/timegrid": "^5.10.1",
         "bootstrap-datepicker": "^1.9.0",
+        "bootstrap-tagsinput": "^0.7.1",
         "brand-colors": "^2.1.1",
         "chart.js": "^3.7.0",
         "ckeditor4": "^4.17.1",
