--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "alexpechkarev/google-maps": "^8.0",
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
         "doctrine/dbal": "^3.3",
         "fruitcake/laravel-cors": "^2.0",
@@ -19,7 +20,8 @@
         "realrashid/sweet-alert": "^4.1",
         "rtconner/laravel-tagging": "^4.1",
         "tightenco/ziggy": "^1.4",
-        "weidner/goutte": "^2.1"
+        "weidner/goutte": "^2.1",
+        "alexpechkarev / google-maps": "^ 8.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
