--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3qjogCEFeKXz8oZbYq/vvvMOivIhwdaM4A8ArfuJyHU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=db_new_land
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -48,5 +48,11 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+GOOGLE_ID=591242794124-j3tr3ue2k7qmnfg1ejg9n3kmj5lg10qb.apps.googleusercontent.com
+GOOGLE_SECRET=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
+GOOGLE_URL=http://127.0.0.1:8000/google/callback
+GOOGLE_MAPS_API_KEY=AIzaSyBGDykmc0F9ixqdrFq0qdGYg86eKEyjJUc
+
+FACEBOOK_APP_ID=1068825127022319
+FACEBOOK_APP_SECRET=23b87ac23373c431e62e14f7cf614240
+FACEBOOK_REDIRECT=http://localhost:8000/facebook/callback
