--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "load-google-maps-api": "^2.0.2",
         "masonry-layout": "^4.2.2",
         "perfect-scrollbar": "^1.5.5",
+        "querystring": "^0.2.1",
         "skycons": "^1.0.0",
         "slick-carousel": "^1.8.1",
         "sweetalert2": "^11.3.3"
